--- a/client/comments.html
+++ b/client/comments.html
@@ -10,7 +10,9 @@
       </p>
     </div>
 
-    {{> comment_list}}
+    {{> comment_form website_id=_id}}
+
+    {{> comment_list website_id=_id}}
 
     <div>
       <a href="/"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>Back</a>
@@ -20,14 +22,31 @@
 </template>
 
 <template name="comment_list">
-  <ul class="list-group">
-    <li class="list-group-item">Some fake comment...</li>
+  {{#if hasAnyComments}}
     {{#each comments}}
-      {{>comment_item}}
+      {{> comment_item}}
     {{/each}}
-  </ul>
+  {{else}}
+    <div class="alert alert-warning" role="alert">There is no comment yet.</div>
+  {{/if}}
 </template>
 
 <template name="comment_item">
-  <li class="list-group-item"></li>
+  <div>
+    <span><em>{{author}} says</em></span>
+    <blockquote>{{comment}}</blockquote>
+  </div>
+</template>
+
+<template name="comment_form">
+  <div class="well">
+    <form class="js-save-comment-form">
+      <div class="form-group">
+        <textarea name="comment" id="comment" cols="30" rows="5" class="form-control"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">
+        Add comment
+      </button>
+    </form>
+  </div>
 </template>
