--- a/client/siteace.html
+++ b/client/siteace.html
@@ -46,7 +46,7 @@
 
 
 <template name="website_form">
-	<div id="website_form" class="hidden_div">
+	<div id="website_form" class="hidden_div well">
 		<form class="js-save-website-form">
 		  <div class="form-group">
 		    <label for="url">Site address</label>
@@ -61,7 +61,8 @@
 		    <input type="text" class="form-control" id="description" placeholder="I found this site really useful for ...">
 		  </div>
 
-		  <button type="submit" class="btn btn-default">Submit</button>
+		  <button type="submit" class="btn btn-primary">Submit</button>
+		  <button class="btn btn-default js-cancel-save-website-form">Cancel</button>
 		</form>
 	</div>
 </template>
@@ -88,7 +89,7 @@
 	</div>
 	<div>
 		<p>
-			<a href="/item/{{_id}}">{{comments}}</a>
+			by {{author}} | <a href="/item/{{_id}}">{{commentNumber}}</a>
 		</p>
 		<span class="label label-primary vote-count">{{vote}}</span>
 		<a href="#" class="btn btn-default btn-sm js-upvote {{#unless currentUser}}disabled{{/unless}}">
