--- a/client/comments.html
+++ b/client/comments.html
@@ -40,6 +40,7 @@
 
 <template name="comment_form">
   <div class="well">
+    <div id="comment-alert" class="alert alert-danger hidden">Cannot post empty comment</div>
     <form class="js-save-comment-form">
       <div class="form-group">
         <textarea name="comment" id="comment" cols="30" rows="5" class="form-control"></textarea>
