--- a/client/siteace.html
+++ b/client/siteace.html
@@ -1,5 +1,5 @@
 <head>
-  <title>siteace</title>
+  <title>sitebook</title>
 </head>
 
 <body></body>
@@ -16,12 +16,12 @@
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <a class="navbar-brand" href="/">
-	        Site Ace
+	        Sitebook
 	      </a>
 	    </div>
-	    <div class="navbar-left">
-		    {{> loginButtons}}
-		  </div>
+	    <ul class="nav navbar-nav navbar-left login-buttons">
+		    <li>{{> loginButtons}}</li>
+		  </ul>
 	  </div>
 	</nav>
 </template>
