--- a/client/siteace.html
+++ b/client/siteace.html
@@ -48,6 +48,9 @@
 		    <label for="url">Site address</label>
 		    <input type="text" class="form-control" id="url" placeholder="http://www.mysite.com">
 		  </div>
+	  	<div class="progress">
+		    <div id="progress-percentage" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+	  	</div>
 		  <div class="form-group">
 		    <label for="title">Title</label>
 		    <input type="text" class="form-control" id="title" placeholder="Mysite">
