Refine website list layout

--- a/client/comments.html
+++ b/client/comments.html
@@ -2,7 +2,7 @@
 
   <div class="container-fluid">
     <div class="page-header">
-      <a href="{{url}}">
+      <a href="{{url}}" target="_blank">
         <h1>{{title}}</h1>
       </a>
       <p class="lead">
