--- a/client/siteace.html
+++ b/client/siteace.html
@@ -101,8 +101,13 @@
 				<a href="/item/{{_id}}">{{title}}</a>
 			</li>
 			<li>
-			<a href="{{url}}" target="_blank" class="btn btn-xs btn-default">Go to url <span class="glyphicon glyphicon-link"></span></a>
+				<a href="{{url}}" target="_blank" class="btn btn-xs btn-default">Go to url <span class="glyphicon glyphicon-link"></span></a>
 			</li>
+			{{#if isAuthor}}
+			<li>
+				<button class="btn btn-xs btn-danger js-delete-website" data-id="{{_id}}">Delete</button>
+			</li>
+			{{/if}}
 		</ul>
 		<p>
 			{{description}}
@@ -111,7 +116,7 @@
 	<div>
 		<ul class="list-inline">
 			<li>
-				by {{author}}
+				by <em>{{author}}</em> <small>{{fromNow}}</small>
 			</li>
 			<li>
 			 <a href="/item/{{_id}}">{{commentNumber}}</a>
