Refine style of fromNow in comment page

--- a/client/comments.html
+++ b/client/comments.html
@@ -33,7 +33,7 @@
 
 <template name="comment_item">
   <div>
-    <span><em>{{author}}</em> says {{fromNow}}</span>
+    <span><em>{{author}}</em> says <small>{{fromNow}}</small></span>
     <blockquote>{{comment}}</blockquote>
   </div>
 </template>
